<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration"
    android:background="@drawable/logotransparent"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <!-- 1st Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewfirstNameid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/EditTextFirstNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:hint="@string/first_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewLastNameid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/EditTextLastNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewBirthDateId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/editTextBirthDateId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:maxLines="1"
                android:editable="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/editTextEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewNationalityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <AutoCompleteTextView
                android:id="@+id/editTextNationalityId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nationality"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewMobileNoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/editTextMobileNoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/mobileno"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/religion"
            android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinnerReligionId"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/nationality"
                android:padding="0dp"
                android:autofillHints="@string/religion"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/maritial_status"
                        android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spinnerMaritialId"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/nationality"
                        android:padding="0dp"
                        android:autofillHints="@string/maritial_status"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right">
        <RadioGroup
            android:id="@+id/gender_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foregroundTint="@color/ambucareColor">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/unknownGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"/>
        </RadioGroup>
    </LinearLayout>
    </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/btnRegistrationId"
            android:text="@string/submit_name"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ambucareColor"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="#ffff"
            android:textAllCaps="false"
            />
    </LinearLayout>
</LinearLayout>