<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:background="@drawable/logotransparent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <!-- 1st Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_login_status"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.10"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic" />
        <ImageView

            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <!-- 2nd Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="4"
        android:background="@drawable/boxpanel"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/textViewAmbucare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/ambucare"
                    android:textColor="@color/ambucareColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage"
                    android:textColor="@color/managementColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgageBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/light_background"
                        android:scaleType="centerInside"
                        android:src="@drawable/logolight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userTipsTextId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:gravity="left"
                        android:text="@string/user_tips"
                        android:textColor="@color/ambucareColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/useTipsLine1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_tips_1st_line"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/useTipsLine2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_tips_2nd_line"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/useTipsLine3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_tips_3rd_line"
                        android:textSize="8sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imgageBackground2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/light_background"
                        android:scaleType="centerInside"
                        android:src="@drawable/hosplogo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:gravity="left"
                        android:text="@string/product_license"
                        android:textColor="@color/ambucareColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ProductLine1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_details"
                        android:textSize="8sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_tips_2nd_line"
                        android:textColor="@color/gray_color"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_tips_3rd_line"
                        android:textColor="@color/gray_color"
                        android:textSize="8sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 3rd Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="3"
        android:background="@drawable/loginbox"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:width="150dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableLeft="@drawable/usericon"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:maxLines="1" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textViewconfirmPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_centerHorizontal="true">
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPasswordId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    app:passwordToggleEnabled="true"
                    android:paddingLeft="10dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableLeft="@drawable/passicon"
                    android:inputType="textPassword"
                    android:maxLines="1">
                </android.support.design.widget.TextInputEditText>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/icon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/twitter" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/security" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btnLogIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/login" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1">>

                        <ImageButton
                            android:id="@+id/btnRegistrationId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/logout" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 4th Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/warningId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textColor="@color/ambucareColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/waringDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/warning_details"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/medicalId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medicalsystem"
            android:textSize="8sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>









